smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace/unclosed-string2-invalid-single-quote.smithy
// Parse error at line 3, column 6 near `'\n`: Expected a valid identifier character, but found '''
namespace abc.def
@foo('
